--- a/Tiramisu/Tiramisu.csproj
+++ b/Tiramisu/Tiramisu.csproj
@@ -44,6 +44,9 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.12\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="OsuParser, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Libs\OsuParser.dll</HintPath>
@@ -61,8 +64,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot.cs" />
-    <Compile Include="Commands\Interactivity.cs" />
-    <Compile Include="Commands\Owner.cs" />
     <Compile Include="Commands\RateChange.cs" />
     <Compile Include="Entities\Config.cs" />
     <Compile Include="Entities\Dependencies.cs" />
@@ -76,6 +77,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="config.json" />
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
