--- a/Tiramisu/packages.config
+++ b/Tiramisu/packages.config
@@ -4,4 +4,7 @@
   <package id="DSharpPlus.CommandsNext" version="3.2.3" targetFramework="net461" />
   <package id="DSharpPlus.Interactivity" version="3.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="NLog" version="4.4.12" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.12" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.12" targetFramework="net461" />
 </packages>
