--- a/Tiramisu/Tiramisu.csproj
+++ b/Tiramisu/Tiramisu.csproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot.cs" />
+    <Compile Include="Commands\Alarm.cs" />
     <Compile Include="Commands\Dice.cs" />
     <Compile Include="Commands\RateChange.cs" />
     <Compile Include="Commands\UserInfo.cs" />
